<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.weather.yzhao.zapposweatherapp.CurrentWeather">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/zipCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/zip" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/search"
            android:onClick="searchCurrWeather"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/zip"
        android:layout_width="fill_parent"
        android:textSize="22sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/currCity"
        android:layout_width="fill_parent"
        android:textSize="22sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:id="@+id/weatherCondition"
            android:layout_width="fill_parent"
            android:textSize="22sp"
            android:layout_height="wrap_content"
            android:paddingBottom = "20sp"
            />
        <TextView
            android:id="@+id/currTemp"
            android:layout_width="fill_parent"
            android:textSize="22sp"
            android:layout_height="wrap_content"
            android:paddingBottom = "20sp"
            />
        <TextView
            android:id="@+id/minTemperature"
            android:layout_width="fill_parent"
            android:textSize="22sp"
            android:layout_height="wrap_content"
            android:paddingBottom = "20sp"
            />
        <TextView
            android:id="@+id/maxTemperature"
            android:layout_width="fill_parent"
            android:textSize="22sp"
            android:layout_height="wrap_content"
            android:paddingBottom = "20sp"
            />
        <TextView
            android:id="@+id/currHumidity"
            android:layout_width="fill_parent"
            android:textSize="22sp"
            android:layout_height="wrap_content"
            android:paddingBottom = "20sp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewForecast"
            android:onClick="viewForecast"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currLoc"
            android:onClick="useCurrLoc"
            />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
