<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.weather.yzhao.zapposweatherapp.Forecast">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/zipCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/zip" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/search"
            android:onClick="searchCurrWeather"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/currCity"
        android:layout_width="fill_parent"
        android:textSize="22sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/day1"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                android:paddingTop="25sp"
                />
            <TextView
                android:id="@+id/weatherCondition1"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                />
            <TextView
                android:id="@+id/minTemperature1"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                />
            <TextView
                android:id="@+id/maxTemperature1"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                />


            <TextView
                android:id="@+id/day2"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                android:paddingTop="25sp"
                />
            <TextView
                android:id="@+id/weatherCondition2"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                />
            <TextView
                android:id="@+id/minTemperature2"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                />
            <TextView
                android:id="@+id/maxTemperature2"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                />

            <TextView
                android:id="@+id/day3"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                android:paddingTop="25sp"
                />
            <TextView
                android:id="@+id/weatherCondition3"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                />
            <TextView
                android:id="@+id/minTemperature3"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                />
            <TextView
                android:id="@+id/maxTemperature3"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                />

            <TextView
                android:id="@+id/day4"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                android:paddingTop="25sp"
                />
            <TextView
                android:id="@+id/weatherCondition4"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                />
            <TextView
                android:id="@+id/minTemperature4"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                />
            <TextView
                android:id="@+id/maxTemperature4"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                />

            <TextView
                android:id="@+id/day5"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                android:paddingTop="25sp"
                />
            <TextView
                android:id="@+id/weatherCondition5"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                />
            <TextView
                android:id="@+id/minTemperature5"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                />
            <TextView
                android:id="@+id/maxTemperature5"
                android:layout_width="fill_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:paddingBottom = "10sp"
                />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/currLoc"
                android:onClick="useCurrLoc"
                android:layout_weight="1"
                />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
